# clouded-engine

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build-3ds.sh  build-linux.sh  build-vita.sh
build-linux/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
cmake/: platform-3ds.cmake  platform-desktop.cmake  platform-vita.cmake
cmake/archive/: platform-3ds.cmake  platform-vita.cmake  toolchain-3ds.cmake  toolchain-vita.cmake
docs/: todos.md
include/: engine.hpp
include/core/: result.hpp  types.hpp  util.hpp
include/core/memory/: arena.hpp  memory.hpp
include/core/platform/: platform.h  types.h
include/core/platform/audio/: audio.h  types.h
include/core/platform/internal/: internal.h  types.h
include/core/platform/io/: io.h
include/core/platform/memory/: memory.h  types.h
include/core/platform/system/: util.h
include/core/platform/video/: screen.h  types.h  video.h
include/core/renderer/: backend.hpp  renderer.hpp  types.hpp
include/engine/: engine.hpp  types.hpp
include/engine/gfx/: renderer.hpp
include/platform/: platform.h  types.h  util.h
include/platform/display/: types.h
include/platform/internal/: memory.h  util.h
include/platform/io/: types.h  util.h
include/platform/memory/: memory.h  util.h
include/platform/system/: system.h
include/runtime/: runtime.hpp
src/: engine.cpp  main.cpp
src/core/: util.cpp
src/core/memory/: arena.cpp  memory.cpp
src/core/platform/: platform.c  types.c  util.c
src/core/platform/3ds/memory/: memory.c
src/core/platform/internal/: internal.c  memory.c
src/core/platform/io/: sdl_io.c
src/core/platform/memory/: memory.c
src/core/platform/sdl/audio/: audio.c
src/core/platform/sdl/memory/: memory.c
src/core/platform/sdl/system/: system.c
src/core/platform/sdl/video/: screen.c
src/core/platform/video/: sdl_screen.c
src/core/renderer/backends/: desktop-opengl.cpp
src/core/renderer/desktop-opengl/: renderer.cpp
src/engine/: engine.cpp  util.cpp
src/platform/: platform.c  types.c  util.c
src/platform/internal/: internal.c  memory.c
src/platform/sdl/audio/: audio.c
src/platform/sdl/display/: screen.c
src/platform/sdl/io/: io.c
src/platform/sdl/memory/: memory.c
src/platform/sdl/system/: system.c
src/runtime/: runtime.cpp
